<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="payment"
            type="app.android.ttp.mikazuki.yoshinani.model.PaymentModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text='@{payment.amount}'
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="15,000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text='@{payment.date}'
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="2016-01-01" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:textSize="13sp"
                android:visibility='@{payment.isRepayment.get()? View.GONE : View.VISIBLE}' />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text='@{payment.event}'
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility='@{payment.isRepayment.get()? View.GONE : View.VISIBLE}'
                tools:text="イベント" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="13sp"
                android:visibility='@{payment.isRepayment.get()? View.GONE : View.VISIBLE}' />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text='@{payment.description}'
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility='@{payment.isRepayment.get()? View.GONE : View.VISIBLE}'
                tools:text="詳細" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paid"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text='@{payment.paidUser.username}'
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="支払い太郎" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@{payment.isRepayment.get()? "相手" : "参加者"}'
                android:textSize="13sp"
                tools:text="参加者" />

            <LinearLayout
                android:id="@+id/participants_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</layout>